# franka-docker

./: .gitignore  Dockerfile  Dockerfile.cuda  NOTES.md  README.md  docker-compose-cuda.yml  docker-compose.yml  packages.txt  requirements.txt  ros_packages.txt
.devcontainer/: devcontainer.json
franka_ws/install/: local_setup.sh  setup.sh
franka_ws/install/franky_msgs/share/franky_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
franka_ws/install/franky_ros/lib/franky_ros/: franky_bridge  franky_test
franka_ws/install/franky_ros/share/franky_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
franka_ws/log/: latest_build
franka_ws/src/franky_msgs/: CMakeLists.txt  package.xml
franka_ws/src/franky_msgs/msg/: CartesianMove.msg  CartesianVelocity.msg  GripperState.msg  JointMove.msg
franka_ws/src/franky_msgs/srv/: BlockingGripperGrasp.srv  BlockingJointMove.srv  SetDynamicsFactor.srv
franka_ws/src/franky_ros/: package.xml  setup.cfg  setup.py
franka_ws/src/franky_ros/franky_ros/: franky_bridge.py  franky_test.py  franky_xbox_control.py
franka_ws/src/franky_ros/launch/: franky_bringup.launch.py  franky_xbox.launch.py
franka_ws/src/realsense_config/: package.xml  setup.cfg  setup.py
franka_ws/src/realsense_config/launch/: pointcloud_rs.launch.py  pointcloud_rs.py
startup/: .tmux.conf  default.perspective  pc.rviz  start_all.py
test_scripts/: admittance_test.py  enable_fci.py  save_robot.py  test_move_robot.py
(+254 files in other folders)
